# pyref.dev

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  index.html  main.py  pyproject.toml  pyrefdev.service
.github/workflows/: pypi_upload.yml
deploy/: pyrefdev.conf  pyrefdev.service
pyrefdev/: __init__.py
src/pyrefdev/: _version.py  config.py  indexer.py  mapping.py  server.py
src/pyrefdev/indexer/: __main__.py  add_docs.py  crawl_docs.py  crawl_pypi.py  index.py  parse_docs.py  parse_pypi.py  pypi.py  requests.py  schema.py  update_config.py  update_configs.py  update_docs.py  update_landing_page.py
src/pyrefdev/mapping/: __init__.py  __python__.py  aiogoogle.py  aiohttp.py  aioitertools.py  aiomysql.py  aioquic.py  aiortc.py  aiosignal.py  aiosmtplib.py  aiostream.py  aleph-alpha-client.py  alexapy.py  anyio.py  apache-beam.py  arrow.py  asammdf.py  asyncssh.py  attrs.py  autoray.py  azure-identity.py  behave.py  bleach.py  bleak.py  blessed.py  boto3.py  botocore.py  bottleneck.py  cached-path.py  cachetools.py  cattrs.py  cbor2.py  charset-normalizer.py  click-option-group.py  click.py  clize.py  cmd2.py  comtypes.py  connexion.py  construct.py  (+218 more)
static/: styles.css
templates/: index.html  search.html
tests/: test_pyrefdev.py
