[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyrefdev"
description = "The entry point to Python reference docs"
authors = [
    {name = "Mango Umbrella LLC", email = "hi@mangoumbrella.com"},
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
]
keywords = [
    "documentation",
]
requires-python = ">=3.9"
dependencies = [
]
dynamic = ["version"]

[project.urls]
Home = "https://pyref.dev"
Source = "https://github.com/mangoumbrella/pyref.dev"

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.34.2,<1",
    "fastapi>=0.115.12,<1",
]

[project.scripts]
pyrefdev = "pyrefdev.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyrefdev/_version.py"
template = '''
version = "{version}"
'''
